# hotels-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml
.github/workflows/: checks.yml
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py  shemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/importer/: router.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 87843bf432e1_name_in_hotels_fix.py  912e8f1746f1_initial_migration.py  f83ea80ecc73_users_rooms_bookings_models_added.py
app/pages/: router.py
app/tasks/: celery.py  email_templates.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_hotels/: test_api.py
app/tests/unit_tests/test_hotels/: test_dao.py
app/tests/unit_tests/test_users/: test_api.py  test_dao.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  shemas.py
dao/: base.py
