[tool.poetry]
name = "hotels-app"
version = "0.1.0"
description = ""
authors = ["Alexandr Obolonkov <itbolonkov2019@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.103.1" }
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"
passlib = "^1.7.4"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
celery = "^5.3.4"
flower = "^2.0.1"
pillow = "^10.1.0"
sqladmin = "^0.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.21" }
types-passlib = "^1.7.7.13"
types-python-jose = "^3.3.4.8"
types-redis = "^4.6.0.7"
celery-types = "^0.20.0"
types-pillow = "^10.1.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "C90",
    "I", "N", "S", "B", "A",
    "ISC", "T20", "Q", "PTH"]
ignore = ["A003", "B008", "S105", "B904", "PTH123"]  # TODO: fix after experiments
exclude = ["migrations"]

[tool.mypy]
explicit_package_bases = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
pythonpath = ". app"
asyncio_mode = "auto"